# Search_Engine

./: .clang-format  .cz.toml  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  MANIFEST.in  README.md  _page_rank.pyi  build.py  doxyfile  main.py  pyproject.toml  pytest.ini  setup.py
.github/: FUNDING.yml  auto_assign.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bugs.md  config.yml  documentation.md  feature.md  refactoring.md  security.md
.github/workflows/: auto-assign-action.yml  auto_release.yml  cmake-multi-platform.yml  cpp_linter.yml
Examples/: graph_example.py  inverted_index_example.py  stemmer_example.py
Examples/cpp_examples/: CMakeLists.txt  main.cpp
docs/: index.md
docs/Architecture_documentation/: 00_Mainpage.dox  01_Introduction.dox  02_Architectural_constraints.dox  03_System_scope_and_context.dox  04_Solution_strategy.dox  05_Building_block_view.dox  06_Runtime_view.dox  07_Deployment_view.dox  08_Concepts.dox  09_Design_decisions.dox  10_Quality_scenarios.dox  11_Technical_risks.dox  12_Glossary.dox
docs/html/: 00__Mainpage_8dox.html  01__Introduction_8dox.html  02__Architectural__constraints_8dox.html  03__System__scope__and__context_8dox.html  04__Solution__strategy_8dox.html  05__Building__block__view_8dox.html  06__Runtime__view_8dox.html  07__Deployment__view_8dox.html  08__Concepts_8dox.html  09__Design__decisions_8dox.html  10__Quality__scenarios_8dox.html  11__Technical__risks_8dox.html  12__Glossary_8dox.html  Chap_00_Architecture_documentation.html  Chap_01_Introduction.html  Chap_02_Architectural_constraints.html  Chap_03_System_scope_and_context.html  Chap_04_Solution_strategy.html  Chap_05_Building_block_view.html  Chap_06_Runtime_View.html  Chap_07_Deployment_view.html  Chap_08_Concepts.html  Chap_09_Design_decisions.html  Chap_10_Quality_scenarios.html  Chap_11_Technical_risks.html  Chap_12_Glossary.html  _2home_2pedro_2projects_2search_engine_2lib_2include_2inverted_index_8h-example.html  ____init_____8py.html  ____init_____8py.js  __hello_8cpp.html  __hello_8cpp.js  __hello_8cpp__incl.dot  __hello_8cpp__incl.map  __hello_8cpp__incl.md5  __inverted__index_8cpp.html  __inverted__index_8cpp.js  __inverted__index_8cpp__incl.dot  __inverted__index_8cpp__incl.map  __inverted__index_8cpp__incl.md5  __page__rank_8cpp.html  (+299 more)
docs/latex/: 00__Mainpage_8dox.tex  01__Introduction_8dox.tex  02__Architectural__constraints_8dox.tex  03__System__scope__and__context_8dox.tex  04__Solution__strategy_8dox.tex  05__Building__block__view_8dox.tex  06__Runtime__view_8dox.tex  07__Deployment__view_8dox.tex  08__Concepts_8dox.tex  09__Design__decisions_8dox.tex  10__Quality__scenarios_8dox.tex  11__Technical__risks_8dox.tex  12__Glossary_8dox.tex  Chap_05_Building_block_view.tex  Chap_06_Runtime_View.tex  Chap_08_Concepts.tex  Chap_12_Glossary.tex  _2home_2pedro_2projects_2search_engine_2lib_2include_2inverted_index_8h-example.tex  ____init_____8py.tex  __hello_8cpp.tex  __hello_8cpp__incl.dot  __hello_8cpp__incl.md5  __inverted__index_8cpp.tex  __inverted__index_8cpp__incl.dot  __inverted__index_8cpp__incl.md5  __page__rank_8cpp.tex  __page__rank_8cpp__incl.dot  __page__rank_8cpp__incl.md5  __stemmer_8cpp.tex  __stemmer_8cpp.tex.tmp  __stemmer_8cpp__incl.dot  annotated.tex  classHello.tex  classexceptions_1_1invalid__pointer__exception.tex  classexceptions_1_1invalid__pointer__exception.tex.tmp  classpage__rank_1_1Graph.tex  (+140 more)
lib/: CMakeLists.txt
lib/include/: hello.h  inverted_index.h  page_rank.h  subtraction.h  sum.h
lib/include/preprocessing/: stemmer.h
lib/include/utils/: string_operations.h
lib/src/: _hello.cpp  _inverted_index.pyx  hello.cpp  inverted_index.cpp  page_rank.cpp  subtraction.cpp  sum.cpp
lib/src/exceptions/: invalid_pointer_exception.cpp
lib/src/preprocessing/: stemmer.cpp  stemmer_cpp.cpp  stemmer_cpp.pyx
search_engine/: __init__.py  crawler.py  example.py  exceptions.py
search_engine-cpp/: crawler.py
search_engine_cpp/: __init__.py  _inverted_index.pyi  crawler.py
tests/unit-tests/: CMakeLists.txt  inverted_index-test.cpp  page_rank-test.cpp  stemmer-test.cpp  subtraction-test.cpp  sum-test.cpp
(+139 files in other folders)
