[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = ""
authors = ["Pedro Bianchini de Quadros <pedrobiqua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cython = "^3.0.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core", "setuptools", "wheel", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true
